public/assets/css/style.css
/* ... */
.job:before {
	content: '';
	position: absolute;
	left: calc(50% - 20px);
	display: block;
	width: 40px;
	height: 40px;
	text-align: center;
	text-shadow: none;
	background-color: var(--bg-light);
	clip-path: var(--rhombus);
}

.job__period {
	display: block;
}

.job--2 {
	grid-row: 2;
	grid-column-start: 2;
}

.job--4 {
	grid-row: 2;
	grid-column-start: 4;
}

.job--1:before,
.job--3:before {
	bottom: -20px;
}

.job--2:before,
.job--4:before {
	top: -20px;
}



/* CTA Callout Box
   ------------------------------------------------------------ */

.callout {
	margin-top: 100px;
	padding: 50px 60px;
	border-top: 10px solid var(--yellow);
	background-color: var(--bg-dark);
}

.callout__title {
	margin-top: 0;
	margin-bottom: 40px;
	font-size: 3.25rem;
	letter-spacing: -.5px;
	line-height: 1;
}

.callout__description {
	margin-bottom: 40px;
	color: var(--text-light);
}



/* Figure with Caption
   ------------------------------------------------------------ */

.figure {
	display: grid;
	align-items: end;
	margin-bottom: 50px;
}

.figure--odd { grid-template-columns: 2fr 1fr; }
.figure--even { grid-template-columns: 1fr 2fr; }
.figure--half { grid-template-columns: 1fr 1fr; }

.figure__image {
	box-shadow: 10px 10px 0 0 var(--bg-dark);
}

.figure__caption {
	padding: 20px 30px;
	font-size: 1.25rem;
	line-height: 1.6;
	background-color: var(--bg-dark);
}

.figure__caption--even {
	order: -1;
}



/* Uses
   ------------------------------------------------------------ */

.uses {
	display: grid;
	grid-template-columns: 2fr 1fr;
	grid-gap: 50px;
}



/* Media Queries for Filthy Graceful Degradation
   ------------------------------------------------------------ */

@media (prefers-reduced-motion: reduce) {
	html { scroll-behavior: initial; }
}

@media (max-width: 1100px) {
	.indented-image {
		max-width: 400px;
		max-height: 400px;
		margin: 40px 40px 40px -200px;
		padding: 20px;
	}
}

@media (max-width: 1000px) {
	h1, .h1 {
		letter-spacing: -1.25px;
	}

	.page-header__intro {
		width: 83.3%;
	}

	.homepage-intro {
		letter-spacing: -1.5px;
	}

	.process__title {
		font-size: 2.5rem;
	}

	.read-more {
		display: block;
	}

	.read-more__title {
		margin-bottom: 15px;
	}

	.read-more__button {
		margin-top: 25px;
	}

	.button {
		padding: 20px 60px;
	}

	.timeline {
		grid-template-columns: repeat(2, 1fr);
		grid-gap: 50px;
	}

	.timeline:before {
		top: 0;
		left: calc(50% - 5px);
		height: 100%;
		width: 10px;
	}

	.job {
		grid-row: inherit;
		grid-column: inherit;
		grid-row-end: span 2;
	}

	.job:before {
		left: inherit;
		top: calc(50% - 20px);
	}

	.job--1:before,
	.job--3:before {
		bottom: inherit;
		right: -20px;
	}

	.job--2:before,
	.job--4:before {
		left: -20px;
	}

	.job--2 {
		grid-row-start: 2;
		grid-column: 2;
	}

	.services {
		display: block;
	}

	.service__description {
		margin-bottom: 25px;
	}

	.projects {
		display: block;
	}

	.project {
		margin-bottom: 40px;
	}

	.figure__caption {
		font-size: 1.125rem;
		line-height: 1.5;
	}

	.figure--odd {
		grid-template-columns: 3fr 2fr;
	}

	.figure--even {
		grid-template-columns: 2fr 3fr;
	}

	.quotes {
		display: block;
	}

	.callout__title {
		margin-bottom: 30px;
		font-size: 2.875rem;
	}

	.uses {
		display: block;
	}

	.figure {
		display: flex;
		flex-direction: column;
		align-items: stretch;
	}

	.figure__caption--even {
		order: 1;
	}

	.figure__image {
		box-shadow: none;
	}
}

@media (max-width: 750px) {
	.main-header {
		height: auto;
		margin: 0;
		padding-top: 15px;
	}

	.site-nav {
		display: block;
		padding: 0;
		background-color: transparent;
		clip-path: inherit;
	}

	.site-nav__list {
		grid-template-columns: repeat(3, 1fr);
		grid-gap: 10px;
		padding: 10px;
	}

	.site-nav__link {
		margin: 0;
		padding: 15px;
		font-size: 1.25rem;
		clip-path: inherit;
	}

	.logo {
		width: 200px;
		height: 200px;
	}

	main:after {
		top: 75px;
		font-size: 12.5rem;
		letter-spacing: -6px;
	}

	.yuge {
		letter-spacing: -1px;
	}

	.homepage-intro {
		letter-spacing: -1.25px;
	}

	.timeline {
		display: block;
		padding: 25px 0 25px 15px;
		border-left: 10px solid var(--bg-dark);
	}

	.timeline:before {
		content: none;
	}

	.job {
		margin-bottom: 20px;
	}

	.job:before {
		width: 30px;
		height: 30px;
		top: calc(50% - 15px);
		left: -15px;
		right: inherit;
	}

	.job--4 {
		margin-bottom: 0;
	}

	.job__period {
		display: inline;
	}

	.read-more {
		padding: 25px 40px;
	}

	.quote__text {
		padding: 25px;
	}

	.quote__footer {
		font-size: 1.375rem;
	}

	.callout {
		margin-top: 75px;
		padding: 40px;
	}

	.indented-image {
		float: none;
		margin: 0 0 30px 0;
		padding: 15px;
		shape-outside: none;
	}

	.process__step {
		margin-bottom: 30px;
		padding: 0;
		border: 0;
	}

	.process__title {
		font-size: 2.25rem;
	}

	.process__title:before {
		position: inherit;
		display: inline-block;
		width: 66px;
		margin-right: 15px;
	}
}

@media (max-width: 600px) {
	main:after {
		content: none;
	}

	h1, .h1 {
		letter-spacing: -1px;
	}

	.page-header__intro {
		width: 100%;
	}

	.homepage-intro {
		letter-spacing: -1px;
	}

	.quote__footer {
		font-size: 1.125rem;
	}

	.button {
		padding: 15px 50px;
	}

	.process__title {
		font-size: 1.875rem;
	}

	.process__title:before {
		width: 60px;
	}

	.read-more {
		padding: 25px 30px;
	}

	.faq__question {
		margin-bottom: 15px;
	}

	.callout {
		margin-top: 50px;
		padding: 25px;
		border-top-width: 6px;
	}

	.callout__title {
		margin-bottom: 15px;
		font-size: 2.25rem;
	}

	.callout__description {
		margin-bottom: 30px;
	}

	.footer-nav__title {
		font-size: 1rem;
	}

	.footer-nav__link {
		padding: 8px;
		font-size: 1.125rem;
	}

	.disclaimer {
		font-size: .875rem;
	}

	.job {
		padding: 15px 20px;
	}
}
/* ... */

